--- a/src/EShop.Repository/EShop.Repository.csproj
+++ b/src/EShop.Repository/EShop.Repository.csproj
@@ -13,7 +13,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="EFCore.NamingConventions" Version="6.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.7" />
 	</ItemGroup>
 
 	<ItemGroup>
