--- a/src/EShop.Repository/EShop.Repository.csproj
+++ b/src/EShop.Repository/EShop.Repository.csproj
@@ -16,6 +16,7 @@
 		<PackageReference Include="EFCore.NamingConventions" Version="6.0.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.8" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.7" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.6" />
 	</ItemGroup>
 
 	<ItemGroup>
