--- a/src/EShop.Domain/EShop.Domain.csproj
+++ b/src/EShop.Domain/EShop.Domain.csproj
@@ -7,13 +7,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <Compile Remove="NewFolder\**" />
-	  <EmbeddedResource Remove="NewFolder\**" />
-	  <None Remove="NewFolder\**" />
-	</ItemGroup>
-
-	<ItemGroup>
+		<Compile Remove="Interfaces\**" />
+		<EmbeddedResource Remove="Interfaces\**" />
 		<Folder Include="Enums\" />
+		<Folder Include="Interfaces\" />
 	</ItemGroup>
 
 </Project>
