refactor connection string and eshopdbcontext file

--- a/src/EShop.Api/appsettings.json
+++ b/src/EShop.Api/appsettings.json
@@ -6,7 +6,7 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Database=EShopDBTest;username=postgres;password=Parsa.itsu69"
+        "EShopDatabase": "Host=localhost;Database=EShopDBTest;username=postgres;password=Parsa.itsu69"
     },
 
     "AllowedHosts": "*"
