--- a/src/EShop.Repository/EShop.Repository.csproj
+++ b/src/EShop.Repository/EShop.Repository.csproj
@@ -15,7 +15,9 @@
 	<ItemGroup>
 		<PackageReference Include="EFCore.NamingConventions" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore"/>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools"  />
 	</ItemGroup>
 
 	<ItemGroup>
