--- a/src/EShop.Domain/EShop.Domain.csproj
+++ b/src/EShop.Domain/EShop.Domain.csproj
@@ -9,8 +9,13 @@
 	<ItemGroup>
 		<Compile Remove="Interfaces\**" />
 		<EmbeddedResource Remove="Interfaces\**" />
+		<Compile Include="Interfaces\IOrderItemRepository.cs" />
+		<Compile Include="Interfaces\IUserRepository.cs" />
+		<Compile Include="Interfaces\ITransactionRepository.cs" />
+		<Compile Include="Interfaces\IProductRepository.cs" />
+		<Compile Include="Interfaces\IOrderRepository.cs" />
+		<Compile Include="Interfaces\IRepository.cs" />
 		<Folder Include="Enums\" />
-		<Folder Include="Interfaces\" />
 	</ItemGroup>
 
 </Project>
