--- a/src/EShop.Repository/EShop.Repository.csproj
+++ b/src/EShop.Repository/EShop.Repository.csproj
@@ -12,6 +12,8 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
 		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Tools" />
+		<!--Redis-->
+		<PackageReference Include="StackExchange.Redis"/>
 	</ItemGroup>
 
 	<ItemGroup>
