Add IDatabase To DI

--- a/src/EShop.Api/EShop.Api.csproj
+++ b/src/EShop.Api/EShop.Api.csproj
@@ -16,4 +16,10 @@
 		<ProjectReference Include="..\EShop.Service\EShop.Service.csproj" />
 	</ItemGroup>
 
-		</Project>
+	<ItemGroup>
+		<Content Update="appsettings.json">
+			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+
+</Project>
