--- a/src/EShop.Api/appsettings.json
+++ b/src/EShop.Api/appsettings.json
@@ -8,7 +8,10 @@
     "ConnectionStrings": {
         "EShopDatabase": "Host=localhost;Database=EShopDBTest;username=postgres;password=Parsa.itsu69"
     },
-    "RedisConnection": "172.16.30.24:6379,password=Parsa.itsu69,abortConnect=False",
-
+    "RedisConnection": {
+        "Connection": "172.16.30.24:6379,password=Parsa.itsu69,abortConnect=False",
+        "ConnectionCount": "16",
+        "DbNumber": "0"
+    },
     "AllowedHosts": "*"
 }
