--- a/src/EShop.Domain/EShop.Domain.csproj
+++ b/src/EShop.Domain/EShop.Domain.csproj
@@ -18,4 +18,8 @@
 		<Folder Include="Enums\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="EasyNetQ" Version="7.0.1" />
+	</ItemGroup>
+
 </Project>
