Add exception handler middlewar . add check x-clientsecurity middleware . add jwt token interface and implementation

--- a/src/EShop.Api/appsettings.json
+++ b/src/EShop.Api/appsettings.json
@@ -13,5 +13,9 @@
         "ConnectionCount": "16",
         "DbNumber": "0"
     },
+    "Jwt": {
+        "Key": "ThisismySecretKey",
+        "Issuer": "www.parsa.net"
+    },
     "AllowedHosts": "*"
 }
