Add RequestLog Using RabbitMQ To Save Logs in Postgresql DataBase

--- a/src/EShop.Api/EShop.Api.csproj
+++ b/src/EShop.Api/EShop.Api.csproj
@@ -15,6 +15,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<ProjectReference Include="..\..\ConsumerRequestLog\ConsumerRequestLog.csproj" />
 		<ProjectReference Include="..\EShop.Service\EShop.Service.csproj" />
 	</ItemGroup>
 
