--- a/src/EShop.Domain/EShop.Domain.csproj
+++ b/src/EShop.Domain/EShop.Domain.csproj
@@ -10,6 +10,7 @@
 		<Compile Remove="Interfaces\**" />
 		<EmbeddedResource Remove="Interfaces\**" />
 		<Compile Include="Interfaces\IOrderItemRepository.cs" />
+		<Compile Include="Interfaces\IRequestLogRepository.cs" />
 		<Compile Include="Interfaces\IUserRepository.cs" />
 		<Compile Include="Interfaces\ITransactionRepository.cs" />
 		<Compile Include="Interfaces\IProductRepository.cs" />
